# Detector-de-Objetos

./: .gitignore  README.md  docker-compose.yml  list_models.py  start.command  test_source_class.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test_cam.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  middleware.py  models.py
backend/app/alerts/: __init__.py  notifier.py
backend/app/analytics/: __init__.py  aggregator.py  routes.py
backend/app/api/: __init__.py  assistant.py  assistant_tools.py  auth_routes.py  pipeline_routes.py  routes.py  websocket.py
backend/app/detection/: __init__.py  base_detector.py  deeplabcut_detector.py  fusion_engine.py  pipeline_manager.py  tracker.py  yolo_detector.py
backend/app/recordings/: __init__.py  recorder.py  routes.py  storage.py
backend/app/video/: __init__.py  sources.py
backend/app/zones/: __init__.py  geometry.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIAssistant.tsx  AlertBanner.tsx  AnalyticsDashboard.tsx  AnalyticsPanel.tsx  DetectionPanel.tsx  Drawer.tsx  MainMenu.tsx  ObjectCounter.tsx  OverlayToggles.tsx  PipelinePanel.tsx  PresetSelector.tsx  QuickStats.tsx  RecordingsViewer.tsx  SettingsForm.tsx  SettingsPanel.tsx  StatsBar.tsx  ThemeToggle.tsx  TopBar.tsx  VideoCanvas.tsx  ZoneEditor.tsx  ZonePanel.tsx  index.ts
frontend/src/hooks/: useDetections.ts
mobile/: App.tsx  app.json  package-lock.json  package.json
(+6 files in other folders)
