[project]
name = "detector-objetos-backend"
version = "0.1.0"
description = "Sistema de detección de objetos en tiempo real con YOLOv11"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "opencv-python>=4.9.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
